<resources>
    <string name="app_name">EShop</string>
    <string name="signin">Sign In</string>
    <string name="hello">Hello</string>
    <string name="signin_text">You can use your email or username, or you can continue with your social account</string>
    <string name="create_account">Create an account</string>
    <string name="google_signin">Sign in with Google</string>
    <string name="email_or_mobile">Use email or mobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_start">Let\'s get started</string>
    <string name="continue_email">Continue with email</string>
    <string name="continue_googleq">Continue with Google</string>
    <string name="create_business_account">Create a business account</string>
    <string name="email_or_mobile_text">Email or mobile</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="remember_me">Remember me</string>
    <string name="reset_password">Reset your password</string>
    <string name="continue_mobile">Continue with mobile</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="continue_default">Continue</string>
    <string name="already_member">Already a member? Sign in</string>
    <string name="agreemet">By creating an account, you agree to our User Agreement and acknowledge reading our User Privacy Notice.</string>

    <!--    Password Hint Messages-->
    <string name="password_hint_empty">At least 8 characters, at least 1 letter and a number or symbol</string>
    <string name="password_hint_1">At least 8 characters and a letter</string>
    <string name="password_hint_2">At least 8 characters and a number or symbol</string>
    <string name="password_hint_3">At least 8 characters</string>
    <string name="password_hint_4">A letter</string>
    <string name="password_hint_5">At least a letter</string>
    <string name="password_hint_6">A number or symbol</string>
    <string name="mobile">Mobile</string>

    <string name="day">day</string>
    <string name="night">night</string>

    <!--    Bundle  -->
    <string name="uid_bundle">uid</string>
    <string name="user_bundle">user</string>
    <string name="email_bundle">email</string>
    <string name="fname_bundle">fname</string>
    <string name="lname_bundle">lname</string>
    <string name="password_bundle">password</string>
    <string name="mobile_bundle">mobile</string>

    <string name="verify_otp">Please verify OTP.</string>

    <string name="email_user_created">User created Successfully. Please verify email.</string>
    <string name="user_creation_error">Error user creation</string>
    <string name="add_phone">Add your phone number</string>
    <string name="message_agreement">By selecting Continue, you agree to receive a text message with a security code. Standard rates may apply</string>
    <string name="enter_security_code">Enter security code</string>
    <string name="security_desc">We sent the code to</string>
    <string name="resend_code">Resend code</string>
    <string name="resend_code_in">You can resend the security code in</string>
    <string name="seconds">seconds.</string>
    <string name="x">x</string>
    <string name="authentication">authentication</string>
    <string name="message_title">CloudOTP</string>

    <string name="users">users</string>

    <!--    User Collection Data-->
    <string name="email_collection">email</string>
    <string name="fname_collection">first_name</string>
    <string name="lname_collection">last_name</string>
    <string name="mobile_collection">mobile</string>

    <string name="auth_fail_1">Error updating user details to the database</string>
    <string name="auth_fail_2">Error updating user profile</string>

    <string name="email_error">This email address has already been used to create eShop account. Please enter a different email account</string>
    <string name="mobile_error">This mobile number has already been used to create eShop account. Please enter a different mobile number</string>
    <string name="otp_error">You have entered an incorrect security code. Please try again</string>

    <string name="web_client_id">172493765045-ndhsima0jjvl2i3oabpvncuk6hgfongl.apps.googleusercontent.com</string>

    <string name="link_account">Link account</string>
    <string name="link_text">It looks like you already have an eShop account. Please enter your eShop password to link your Google account</string>
    <string name="create_google_text">Review the Google details we will use to create your eShop account</string>
    <string name="link_your_accounts">Link your accounts</string>
    <string name="already_eshop">Already on eShop?\nLink an existing account</string>

    <string name="authentication_phone">phone</string>
    <string name="authentication_google">google</string>
    <string name="sign_error">Oops, that doesn\'t match.</string>

    <string name="preference_name">data</string>
    <string name="keystore_type">AndroidKeyStore</string>
    <string name="encryption_exception">Error while encrypting</string>
    <string name="encryption_alias">EShopEncryptionKey</string>
    <string name="encryption_cipher">AES/CBC/PKCS7Padding</string>

    <!--    Product-->
    <string name="item">Item</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="about_this_item">About this item</string>
    <string name="condition">Condition</string>
    <string name="quantity">Quantity</string>
    <string name="category">Category</string>
    <string name="buy_it_now">Buy it now</string>
    <string name="description">Description</string>

    <string name="bottom_nav_home_title">Home</string>
    <string name="bottom_nav_user_title">My eShop</string>
    <string name="bottom_nav_inbox_title">Inbox</string>
    <string name="bottom_nav_selling_title">Selling</string>

    <string name="search_eshop">Search on eShop</string>

    <string name="my_eshop">My eShop</string>
    <string name="watchlist">Watchlist</string>
    <string name="cart">Cart</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="user_preferences">user_login</string>
    <string name="is_user_logged">IsUserLogged</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>

    <string name="products_firebase">products</string>
    <string name="product_title">title</string>
    <string name="product_description">description</string>
    <string name="product_price">price</string>
    <string name="product_qty">quantity</string>
    <string name="product_images">images</string>

    <string name="sender_email">8a59edd35fbef9</string>
    <string name="sender_password">929e9679f85798</string>

    <string name="base64Image">[base64Image]</string>
    <string name="recipent">[Recipient Name]</string>

    <string name="smtp_auth">mail.smtp.auth</string>
    <string name="smtp_starttls">mail.smtp.starttls.enable</string>
    <string name="smtp_host">mail.smtp.host</string>
    <string name="smtp_port">mail.smtp.port</string>

    <string name="smtp_auth_value">true</string>
    <string name="smtp_starttls_value">true</string>
    <string name="smtp_host_value">sandbox.smtp.mailtrap.io</string>
    <string name="smtp_port_value">2525</string>

    <string name="sender_email_address">info@eshop.lk</string>
    <string name="email_subject">,your eShop adventure has just begun</string>

    <string name="currency">Rs. </string>
    <string name="product_id">id</string>

    <string name="cart_title">eShop shopping cart</string>
    <string name="cart_empty">You don\'t have any items in your basket. Let\'s go shopping.</string>

    <string name="qty">Qty:</string>
    <string name="remove">Remove</string>
    <string name="subtotal">Subtotal</string>
    <string name="go_checkout">Go to checkout</string>

    <string name="cart_collection">carts</string>
    <string name="cart_product">product</string>
    <string name="cart_qty">quantity</string>
    <string name="cart_item_collection">cart</string>

    <string name="cart_product_product_id">product.id</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="no_delivery">No.</string>
    <string name="street_delivery">Street</string>
    <string name="city_delivery">City</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="checkout">Checkout</string>

    <string name="lat">Lat:</string>
    <string name="lng">Lng:</string>
    <string name="checkout_msg">You have successfully placed your order</string>

    <string name="notification_id">order_channel</string>
    <string name="notification_channel">order_channel</string>
    <string name="notification_title">Order Placed</string>
    <string name="notification_msg">Your order has been successfully placed!</string>
</resources>